test/fixtures/diagnostics/type-checker/negative/collection-spread-noncollection/input.tysh
namespace Samples.CollectionDiagnostics

fun invalidSpread(): int[] = [1, ...2]
